# my_bank_app

./: .env  .gitignore  API routes.txt  README.md  docker-compose.yaml  install.sh  pg-admin.yaml  pyproject.toml  requirements.txt  test.ipynb  test_db.ipynb
.github/workflows/: .env  upload_docker_images.yaml
AA/src/: functions.py  objects.py  unit_tests.py
archives/: generate_tables.py
archives/(obsolete)myBankPackage/: __init__.py  setup.py
changelogs/: 0.1.0.md  0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.2.0.md  0.2.1.md
common/utils/: generate_requirements.py  generate_tables.py
dev_test/: api.env  docker-compose.yaml  remove_local_test.sh  requirements_test_env.txt  set_local_test.sh  tests_todo  texts_todo
local_tests/: docker-compose-test.yaml  docker-compose.yaml  remove_local_test.sh  set_local_test.sh
myBankPackage/: __init__.py  generate_test_objects.py  notebook_test.ipynb  setup.py  test.ipynb  tests.py
myBankPackage/test_accounts/: default_test_account.pkl  test_account.pkl
myBankPackage/test_budgets/: default_budget_June.pkl  test_budget_January.pkl
myBankPackage/test_transactions/: test_transactions.csv
src/: .env  api.py  functions.py  objects.py  test_notebook.ipynb
src/api/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile_build  Dockerfile_test  api.env  (+17 more)
src/api(old)/: api.py
storage/: test_accounts.json  test_budgets.csv
streamlit/: main.py
tests/: unit_tests.py
utils/: generate_requirements.py  generate_secret_key.py  generate_tables.py  generate_user_credentials.py  requirements.txt  requirements_utils.txt
(+31 files in other folders)
